force-app/main/default/objects/blng__PaymentMethod__c/blng__PaymentMethod__c.object-meta.xml
<CustomObject>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Payment Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>