force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__AutoPay__c.field-meta.xml
<CustomField>
    <fullName>blng__AutoPay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Pay</label>
    <type>Checkbox</type>
</CustomField>