force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>blng__BankAccountNumber__c</fullName>
    <label>Bank Account Number</label>
    <length>25</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>