force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__BankAccountType__c.field-meta.xml
<CustomField>
    <fullName>blng__BankAccountType__c</fullName>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__BankAccountType</valueSetName>
    </valueSet>
</CustomField>