force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__BankName__c.field-meta.xml
<CustomField>
    <fullName>blng__BankName__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>