force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__BankRoutingCode__c.field-meta.xml
<CustomField>
    <fullName>blng__BankRoutingCode__c</fullName>
    <description>The valid Routing number of the customer’s Bank</description>
    <inlineHelpText>The valid Routing number of the Bank, this is also called as ABA code</inlineHelpText>
    <label>Bank Routing Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>