force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__BillingCity__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingCity__c</fullName>
    <inlineHelpText>City of Card&apos;s billing address</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>