force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingCountry__c</fullName>
    <inlineHelpText>Country of Card&apos;s billing address</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__BillingCountry</valueSetName>
    </valueSet>
</CustomField>