force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__BillingFax__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingFax__c</fullName>
    <inlineHelpText>Fax of Card&apos;s billing address</inlineHelpText>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>