force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__BillingFirstName__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingFirstName__c</fullName>
    <inlineHelpText>First Name of Card&apos;s billing address</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>