force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__BillingLastName__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingLastName__c</fullName>
    <inlineHelpText>Last Name of Card&apos;s billing address</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>