force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingStreet__c</fullName>
    <inlineHelpText>Street Address 1 of Card&apos;s billing address</inlineHelpText>
    <label>Street Address 1</label>
    <type>TextArea</type>
</CustomField>