force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__CardBIN__c.field-meta.xml
<CustomField>
    <fullName>blng__CardBIN__c</fullName>
    <inlineHelpText>The BIN for the card. First 6 digits of the card</inlineHelpText>
    <label>Card BIN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>