force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__CardExpirationYear__c.field-meta.xml
<CustomField>
    <fullName>blng__CardExpirationYear__c</fullName>
    <label>Card Expiration Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__CardExpirationYear</valueSetName>
    </valueSet>
</CustomField>