force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__CardNumber__c.field-meta.xml
<CustomField>
    <fullName>blng__CardNumber__c</fullName>
    <label>Card Number</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>