force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__GatewayResponse__c.field-meta.xml
<CustomField>
    <fullName>blng__GatewayResponse__c</fullName>
    <label>Gateway Response</label>
    <type>TextArea</type>
</CustomField>