force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__GLRule__c.field-meta.xml
<CustomField>
    <fullName>blng__GLRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>PaymentMethods</relationshipName>
    <type>Lookup</type>
</CustomField>