force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>blng__LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>PaymentMethods</relationshipName>
    <type>Lookup</type>
</CustomField>