force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__Nameoncard__c.field-meta.xml
<CustomField>
    <fullName>blng__Nameoncard__c</fullName>
    <label>Name on Card</label>
    <length>100</length>
    <type>Text</type>
</CustomField>