force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__PaymentGateway__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentGateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Gateway</label>
    <referenceTo>blng__PaymentGateway__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>