force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__PaymentType__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentType__c</fullName>
    <label>Payment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PaymentMethodType</valueSetName>
    </valueSet>
</CustomField>