force-app/main/default/objects/blng__PaymentMethod__c/fields/blng__StreetAddress2__c.field-meta.xml
<CustomField>
    <fullName>blng__StreetAddress2__c</fullName>
    <inlineHelpText>Street Address 2 of Card&apos;s billing address</inlineHelpText>
    <label>Street Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>